# math_utilities

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  setup.cpg
.github/workflows/: label-publish.yml  label-verify.yaml  pr.yaml  release-notes.yaml  release.yml  setup-branch-protection.yml
Release-Notes/: Release-1.3.3.md  Release-1.3.4.md  Release-1.3.5.md  Release-1.3.md  Release-2.0.0.md  Release-2.1.0.md  unreleased.md
consumer-test/: CMakeLists.txt  main.cpp
include/mylib/: sum.h
profiles/: macos
src/: sum.cpp
tests/: CMakeLists.txt  test_sum.cpp
